# ssh-mountmate

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  rsshmount_gui.pyw
.github/workflows/: build.yml  release.yml
app/: rsshmount_gui.pyw
python_port/: .gitignore  README.md  pyproject.toml
python_port/src/ssh_mountmate/: __init__.py  app.py  config_store.py  core.py  gui.py  models.py  rclone.py
src/ssh_mountmate/: __init__.py  core.py  gui.py  rclone.py
