[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-mountmate-python-port"
version = "0.1.0"
description = "Experimental cross-platform Python port of SSH MountMate"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6"]

[project.scripts]
ssh-mountmate-port = "ssh_mountmate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
